Eliminate use of deprecated URL constructors; drop support for adapting/coercing URL values.